# search_engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  answer.json  config.json  main.cpp  readme.md
config/: answer.json  config.json
include/: converter.h  inverted_index.h  server.h
src/: CMakeLists.txt  converter.cpp  inverted_index.cpp  main.cpp  server.cpp
tests/: CMakeLists.txt  index_tests.cpp  server_tests.cpp
